--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ejs": "^3.1.10",
-    "express": "^4.19.2",
-    "mongoose": "^8.3.4"
+    "dompurify": "^3.0.8",
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
+    "jsdom": "^23.2.0",
+    "marked": "^11.1.1",
+    "method-override": "^3.0.0",
+    "mongoose": "^8.0.4",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.0.2"
   }
 }
